--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,16 +1,14 @@
-<h1><%= @place["name"] %></h1>
+<h2><%= @place.name %></h2>
 
-<h2>My Entries</h2>
-<% for entry in @entries %>
-  <h3><%= entry["title"] %></h3>
-  <h4><%= entry["occurred_on"] %></h4>
-  <p><%= entry["description"] %></p>
-<% end %>
+<h3>Entries:</h3>
+<ul>
+  <% @entries.each do |entry| %>
+    <li>
+      <strong><%= entry.title %></strong> - <%= entry.occurred_on %>
+      <p><%= entry.description %></p>
+    </li>
+  <% end %>
+</ul>
 
-<p>
-  <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
-</p>
-
-<p>
-  <a href="/places">Back to All Places</a>
-</p>
+<%= link_to 'Back to Places', places_path %>
+<%= link_to 'Add New Entry', new_entry_path %>
